fix project images on small screens

--- a/css/projects.css
+++ b/css/projects.css
@@ -42,8 +42,10 @@
 	background-position: left top;
 	background-size: cover;
 }
-.project.feature .background.background-big {
-	background-size: 250%;
+@media screen and (min-width: 992px) {
+	.project.feature .background.background-big {
+		background-size: 250%;
+	}
 }
 .project.feature .background.background-centered {
 	background-position: center;
